test/fixtures/errors/force_colors.snapshot
*force_colors.js:1
throw new Error('Should include grayed stack trace')
^

Error: Should include grayed stack trace
    at Object.<anonymous> [90m(/[39mtest*force_colors.js:1:7[90m)[39m
[90m    at Module._compile (node:internal*modules*cjs*loader:1256:14)[39m
[90m    at Module._extensions..js (node:internal*modules*cjs*loader:1310:10)[39m
[90m    at Module.load (node:internal*modules*cjs*loader:1119:32)[39m
[90m    at Module._load (node:internal*modules*cjs*loader:960:12)[39m
[90m    at Function.executeUserEntryPoint [as runMain] (node:internal*modules*run_main:86:12)[39m
[90m    at node:internal*main*run_main_module:23:47[39m

Node.js *
